package hassan.hotelproject.model;

public enum BedType {
    SINGLE,
    DOUBLE,
    KING_SIZE_BED,
    QUEEN_BED
}
