package hassan.hotelproject.model;

public enum PaymentStatus {
    PENDING,
    CONFIRMED
}
