package hassan.hotelproject.model;

public enum ReservationStatus {
    CONFIRMED,
    CANCELED,
    PENDING
}
