package hassan.hotelproject.model;

public enum RoomType {
    TWIN_STANDARD_ROOM,
    DOUBLE,STANDARD_ROOM,
    TRIPLE_ROOM,
    CANAL_VIEW_ROOM
}
